objects/TT_Salesforce_Mapping__c/TT_Salesforce_Mapping__c.object-meta.xml
<CustomObject>
    <label>TT Salesforce Mapping</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>TT Salesforce Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Salesforce Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>