objects/TT_Salesforce_Mapping__c/fields/Is_Sync_Empty_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_Empty_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked then empty field in TT will be synced to Salesforce</description>
    <label>Is Sync Empty Field</label>
    <type>Checkbox</type>
</CustomField>