objects/TT_Salesforce_Mapping__c/fields/TT_Field__c.field-meta.xml
<CustomField>
    <fullName>TT_Field__c</fullName>
    <externalId>true</externalId>
    <label>TT Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>