objects/TT_Salesforce_Mapping__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>