objects/TT_Salesforce_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Field__c</columns>
    <columns>TT_Field__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Is_Deleted__c</columns>
    <columns>Is_Sync_Empty_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>